--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -4,22 +4,24 @@ AM_CPPFLAGS = -I$(top_srcdir)/include \
 
 bin_PROGRAMS	= brd bitsy blkscan blkstats rawtx
 
-brd_SOURCES=	\
-	brd.c		\
-	brd.h
+brd_SOURCES	=	\
+		brd.c	\
+		brd.h
 
-brd_LDADD	= $(top_builddir)/lib/libbitc.la $(top_builddir)/lib/libbitcnet.la \
-            @CRYPTO_LIBS@ @GMP_LIBS@ @EVENT_LIBS@
+brd_LDADD	= $(top_builddir)/lib/libbitc.la \
+		$(top_builddir)/lib/net/libbitcnet.la \
+		@CRYPTO_LIBS@ @GMP_LIBS@ @EVENT_LIBS@
 
-bitsy_SOURCES=	\
+bitsy_SOURCES =	\
 	bitsy.c	\
 	bitsy.h	\
 	aes.c	\
-        wallet.c wallet.h
+	wallet.c wallet.h
 
-bitsy_LDADD	= $(top_builddir)/lib/libbitc.la $(top_builddir)/lib/libbitcnet.la \
-		  @CRYPTO_LIBS@ @GMP_LIBS@ @ARGP_LIBS@ \
-		  @EVENT_LIBS@ @JANSSON_LIBS@
+bitsy_LDADD	= $(top_builddir)/lib/libbitc.la \
+		$(top_builddir)/lib/net/libbitcnet.la \
+		@CRYPTO_LIBS@ @GMP_LIBS@ @ARGP_LIBS@ \
+		@EVENT_LIBS@ @JANSSON_LIBS@
 
 blkscan_LDADD	= $(top_builddir)/lib/libbitc.la \
 		  @CRYPTO_LIBS@ @GMP_LIBS@ @ARGP_LIBS@
