bitc: Modularize crypto code

--- a/include/bitc/Makefile.am
+++ b/include/bitc/Makefile.am
@@ -1,45 +1,50 @@
 
-bitcincludedir=$(includedir)/bitc
+libbitc_ladir = $(includedir)/bitc
 
-bitcinclude_HEADERS =	\
-	crypto/aes.h	\
-	crypto/hmac.h	\
-	crypto/ripemd160.h	\
-	crypto/sha1.h	\
-	crypto/sha2.h	\
-	address.h	\
-	addr_match.h	\
-	aes_util.h	\
-	base58.h	\
-	blkdb.h		\
-	bloom.h		\
-	buffer.h	\
-	buint.h		\
-	checkpoints.h	\
-	clist.h		\
-	compat.h	\
-	coredefs.h	\
-	core.h		\
-	cstr.h		\
-	endian.h	\
-	hashtab.h	\
-	hdkeys.h	\
-	hexcode.h	\
-	key.h		\
-	mbr.h		\
-	message.h	\
-	parr.h		\
-	script.h	\
-	serialize.h	\
-	util.h		\
-	wallet.h
+libbitc_la_HEADERS =	\
+		crypto/hmac.h	\
+		crypto/ripemd160.h	\
+		crypto/sha1.h	\
+		crypto/sha2.h	\
+		address.h	\
+		addr_match.h	\
+		base58.h	\
+		blkdb.h		\
+		bloom.h		\
+		buffer.h	\
+		buint.h		\
+		checkpoints.h	\
+		clist.h		\
+		compat.h	\
+		coredefs.h	\
+		core.h		\
+		cstr.h		\
+		endian.h	\
+		hashtab.h	\
+		hdkeys.h	\
+		hexcode.h	\
+		key.h		\
+		mbr.h		\
+		message.h	\
+		parr.h		\
+		script.h	\
+		serialize.h	\
+		util.h		\
+		wallet.h
 
-bitcnetincludedir=$(includedir)/bitc/net
+libbitcnet_ladir = $(includedir)/bitc/net/
 
-bitcnetinclude_HEADERS = \
-    net/dns.h	\
-    net/fakepoll.h	\
-    net/net.h	\
-    net/netbase.h	\
-    net/peerman.h
+libbitcnet_la_HEADERS =	\
+		net/dns.h	\
+		net/fakepoll.h	\
+		net/net.h	\
+		net/netbase.h	\
+		net/peerman.h
 
+libbitcaes_ladir = $(includedir)/bitc/crypto/
+
+libbitcaes_la_HEADERS =	\
+		crypto/aes.h		\
+		crypto/aes_util.h	\
+		crypto/aesopt.h		\
+		crypto/aestab.h
