--- a/test/.gitignore
+++ b/test/.gitignore
@@ -1,7 +1,7 @@
 
 libtest.a
 
-aes
+aes-util
 base58
 block
 blockfile
@@ -10,6 +10,7 @@ blkdb
 chain-verf
 clist
 cstr
+ctaes
 fileio
 hash
 hashtab
@@ -28,4 +29,4 @@ wallet-basics
 
 *.trs
 *.log
-
+aes_util.dat
