--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -23,11 +23,11 @@ noinst_LIBRARIES= libtest.a
 
 libtest_a_SOURCES= libtest.h libtest.c
 
-noinst_PROGRAMS	= clist cstr hex hdkeys hashtab base58 fileio util keyset bloom \
+noinst_PROGRAMS	= clist cstr coredefs hex hdkeys hashtab base58 fileio util keyset bloom \
 		  message parr script-parse tx block blockfile blkdb script \
 		  tx-valid wallet wallet-basics chain-verf hash ctaes aes-util
 
-TESTS		= clist cstr hex hdkeys hashtab base58 fileio util keyset bloom \
+TESTS		= clist cstr coredefs hex hdkeys hashtab base58 fileio util keyset bloom \
 		  message parr script-parse tx block blockfile blkdb script \
 		  tx-valid wallet wallet-basics chain-verf hash ctaes aes-util
 
@@ -35,7 +35,6 @@ COMMON_LDADD	= libtest.a $(top_builddir)/lib/libbitc.la \
 		  $(top_builddir)/external/secp256k1/libsecp256k1.la \
 		  @CRYPTO_LIBS@ @GMP_LIBS@ @JANSSON_LIBS@ @MATH_LIBS@
 
-aes_LDADD           = $(COMMON_LDADD) $(top_builddir)/lib/libbitcaes.la
 base58_LDADD        = $(COMMON_LDADD)
 blkdb_LDADD         = $(COMMON_LDADD)
 block_LDADD         = $(COMMON_LDADD)
@@ -46,6 +45,7 @@ clist_LDADD         = $(COMMON_LDADD)
 cstr_LDADD		    = $(COMMON_LDADD)
 ctaes_LDADD         = $(COMMON_LDADD) $(top_builddir)/lib/libbitcaes.la
 aes_util_LDADD		= $(COMMON_LDADD) $(top_builddir)/lib/libbitcaes.la
+coredefs_LDADD		    = $(COMMON_LDADD)
 fileio_LDADD		= $(COMMON_LDADD)
 hash_LDADD			= $(COMMON_LDADD)
 hex_LDADD           = $(COMMON_LDADD)
