Makefile: Add make binary files package target (make pkg-bin)

--- a/Makefile.am
+++ b/Makefile.am
@@ -38,3 +38,11 @@ pkg-rpm: dist
 	mv $(abs_srcdir)/$(distdir)/rpmbuild/RPMS/*/*.rpm $(abs_srcdir)
 
 	$(am__post_remove_distdir)
+
+pkg-bin:
+	- rm -rf $(distdir)
+	make DESTDIR=$(abs_srcdir)/$(distdir) install
+	cd $(distdir); \
+          tar zcvf $(abs_srcdir)/$(distdir)-$(tag_os).tar.gz `find . -type f -print`
+
+	$(am__post_remove_distdir)
