--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -37,21 +37,21 @@ COMMON_LDADD	= libtest.a $(top_builddir)/lib/libbitc.la \
 		  $(top_builddir)/external/secp256k1/libsecp256k1.la \
 		  @CRYPTO_LIBS@ @GMP_LIBS@ @JANSSON_LIBS@ @MATH_LIBS@
 
-base58_LDADD        = $(COMMON_LDADD)
-blkdb_LDADD         = $(COMMON_LDADD)
-block_LDADD         = $(COMMON_LDADD)
-blockfile_LDADD 	= $(COMMON_LDADD)
-bloom_LDADD         = $(COMMON_LDADD)
+base58_LDADD		= $(COMMON_LDADD)
+blkdb_LDADD		= $(COMMON_LDADD)
+block_LDADD		= $(COMMON_LDADD)
+blockfile_LDADD		= $(COMMON_LDADD)
+bloom_LDADD		= $(COMMON_LDADD)
 chain_verf_LDADD	= $(COMMON_LDADD)
-clist_LDADD         = $(COMMON_LDADD)
-cstr_LDADD		    = $(COMMON_LDADD)
-coredefs_LDADD		    = $(COMMON_LDADD)
-ctaes_LDADD         = $(COMMON_LDADD) $(top_builddir)/lib/libbitcaes.la
-aes_util_LDADD		= $(COMMON_LDADD) $(top_builddir)/lib/libbitcaes.la
+clist_LDADD		= $(COMMON_LDADD)
+cstr_LDADD		= $(COMMON_LDADD)
+coredefs_LDADD		= $(COMMON_LDADD)
+ctaes_LDADD		= $(COMMON_LDADD) $(top_builddir)/lib/libbitcwallet.la
+aes_util_LDADD		= $(COMMON_LDADD) $(top_builddir)/lib/libbitcwallet.la
 crypto_LDADD		= $(COMMON_LDADD)
 fileio_LDADD		= $(COMMON_LDADD)
-hash_LDADD			= $(COMMON_LDADD)
-hex_LDADD           = $(COMMON_LDADD)
+hash_LDADD		= $(COMMON_LDADD)
+hex_LDADD		= $(COMMON_LDADD)
 hashtab_LDADD		= $(COMMON_LDADD)
 hdkeys_LDADD		= $(COMMON_LDADD)
 keyset_LDADD		= $(COMMON_LDADD)
@@ -60,11 +60,11 @@ mbr_LDADD		= $(COMMON_LDADD)
 message_LDADD		= $(COMMON_LDADD)
 misc_LDADD		= $(COMMON_LDADD)
 net_LDADD		= $(COMMON_LDADD) $(top_builddir)/lib/libbitcnet.la
-parr_LDADD		    = $(COMMON_LDADD)
+parr_LDADD		= $(COMMON_LDADD)
 script_LDADD		= $(COMMON_LDADD)
 script_parse_LDADD	= $(COMMON_LDADD)
-tx_LDADD            = $(COMMON_LDADD)
+tx_LDADD		= $(COMMON_LDADD)
 tx_valid_LDADD		= $(COMMON_LDADD)
-util_LDADD		    = $(COMMON_LDADD) $(top_builddir)/lib/libbitcnet.la
-wallet_LDADD		= $(COMMON_LDADD)
+util_LDADD		= $(COMMON_LDADD) $(top_builddir)/lib/libbitcnet.la
+wallet_LDADD		= $(COMMON_LDADD) $(top_builddir)/lib/libbitcwallet.la
 wallet_basics_LDADD	= $(COMMON_LDADD)
