net: Replace libevent dependency with embedded libev

--- a/.travis.yml
+++ b/.travis.yml
@@ -52,7 +52,6 @@ addons:
   apt_packages:
       - libgmp-dev
       - libjansson-dev
-      - libevent-dev
       - lcov
       - valgrind
       - libtool
@@ -77,7 +76,7 @@ notifications:
   slack: libbitc:LzNZosd4L6ZkORMznw0mwrq7
 
 install:
-  - if [ "$TRAVIS_OS_NAME" = "osx" ]; then brew install libevent jansson argp-standalone; fi
+  - if [ "$TRAVIS_OS_NAME" = "osx" ]; then brew install jansson argp-standalone; fi
   - if [ "$TRAVIS_OS_NAME" = "osx" ] && [ "$ENABLE_COVERAGE" = "yes" ]; then brew install lcov; fi
   - if [ "$TRAVIS_OS_NAME" = "osx" ] && [ "$ENABLE_VALGRIND" = "yes" ]; then brew install valgrind; fi
   - if [ "$ENABLE_COVERAGE" = "yes" ]; then gem install coveralls-lcov; fi
@@ -86,7 +85,7 @@ before_script:
   - ./autogen.sh
 
 script:
-  - if [ "$MAKETARGET" = "pkg-rpm" ]; then docker run -t -i -v $TRAVIS_BUILD_DIR:/libbitc centos:7 /bin/bash -c "yum -y update; yum -y install autoconf automake libtool make rpm-build openssl-devel libevent-devel gmp-devel jansson-devel; cd /libbitc; ./autogen.sh; ./configure --cache-file=config.cache; make $MAKEJOBS $MAKETARGET"; exit $? ; fi
+  - if [ "$MAKETARGET" = "pkg-rpm" ]; then docker run -t -i -v $TRAVIS_BUILD_DIR:/libbitc centos:7 /bin/bash -c "yum -y update; yum -y install autoconf automake libtool make rpm-build gmp-devel jansson-devel; cd /libbitc; ./autogen.sh; ./configure --cache-file=config.cache; make $MAKEJOBS $MAKETARGET"; exit $? ; fi
   - ./configure --cache-file=config.cache --enable-coverage=$ENABLE_COVERAGE --enable-valgrind=$ENABLE_VALGRIND || ( cat config.log && false)
   - make -s $MAKEJOBS $MAKETARGET || ( echo "Build failure. Verbose build follows." && make V=1 $MAKETARGET; false )
 
