--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -10,7 +10,7 @@ brd_SOURCES	=	\
 
 brd_LDADD	= $(top_builddir)/lib/libbitc.la \
 		$(top_builddir)/lib/libbitcnet.la \
-		@GMP_LIBS@ @EVENT_LIBS@
+		@GMP_LIBS@
 
 bitsy_SOURCES =	\
 	bitsy.c	\
@@ -20,8 +20,7 @@ bitsy_SOURCES =	\
 bitsy_LDADD	= $(top_builddir)/lib/libbitc.la \
 		$(top_builddir)/lib/libbitcnet.la \
 		$(top_builddir)/lib/libbitcwallet.la \
-		@GMP_LIBS@ @ARGP_LIBS@ \
-		@EVENT_LIBS@ @JANSSON_LIBS@
+		@GMP_LIBS@ @ARGP_LIBS@  @JANSSON_LIBS@
 
 blkscan_LDADD	= $(top_builddir)/lib/libbitc.la \
 		  @GMP_LIBS@ @ARGP_LIBS@
